--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,11 +1,26 @@
 tag1:
-  name: tag1
+  name: blockchain
 
 tag2:
-  name: tag2
+  name: etc
 
 tag3:
-  name: tag3
+  name: interface
 
 tag4:
-  name: tag4
+  name: life
+
+tag5:
+  name: not-finished
+
+tag6:
+  name: not-tried
+
+tag7:
+  name: study
+
+tag8:
+  name: trying
+
+tag9:
+  name: wallet
